--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -35,14 +35,14 @@
     "terminal.integrated.defaultProfile.osx": "zsh",
     
     // @sync os=mac
-    "terminal.integrated.fontSize": 18,
+    "terminal.integrated.fontSize": 22,
     "security.workspace.trust.untrustedFiles": "open",
     "terminal.integrated.inheritEnv": false,
     "workbench.startupEditor": "none",
     "[python]": {
         "editor.formatOnType": true
     },
-    "workbench.colorTheme": "Default Dark+",
     "editor.accessibilitySupport": "off",
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "python.defaultInterpreterPath": "/opt/homebrew/Caskroom/miniforge/base/bin/python"
 }
