--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 [init]
 	defaultBranch = main
 [core]
-	excludesfile = /Users/niels/.gitignore_global
+	excludesfile = /Users/nielsb/.gitignore_global
 [credential]
 	helper = 
 	helper = /usr/local/share/gcm-core/git-credential-manager
