--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "editor.fontSize": 18,
+    "editor.fontSize": 16,
     "editor.tabSize": 2,
     "sync.gist": "5d1c68f179ef0921044de5ef1c8d8dd2",
 
@@ -44,5 +44,6 @@
     },
     "editor.accessibilitySupport": "off",
     "editor.minimap.enabled": false,
-    "python.defaultInterpreterPath": "/opt/homebrew/Caskroom/miniforge/base/bin/python"
+    "python.defaultInterpreterPath": "/opt/homebrew/Caskroom/miniforge/base/bin/python",
+    "workbench.layoutControl.enabled": false
 }
